--- a/commessa.html
+++ b/commessa.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Commessa CAMOGA</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       margin: 0;
-      padding: 50px 20px 60px; /* ↕ spazio in alto e in basso */
+      padding: 50px 20px 60px;
       font-family: Arial, sans-serif;
       background: #f0f2f5;
     }
@@ -15,7 +15,7 @@
     .etichetta {
       background: #fff;
       padding: 30px;
-      margin-top: 40px; /* ↘ spinta verso il centro verticale */
+      margin-top: 40px;
       max-width: 420px;
       width: 100%;
       border-radius: 12px;
@@ -37,9 +37,9 @@
 
     .qr img, .barcode img {
       width: 100%;
-      max-width: 240px;
+      max-width: 160px;
       height: auto;
-      touch-action: manipulation; /* 🔒 previene gesture strane su mobile */
+      touch-action: manipulation;
     }
 
     .qr, .barcode {
