--- a/commessa.html
+++ b/commessa.html
@@ -8,16 +8,16 @@
     body {
       margin: 0;
       padding: 50px 20px 60px;
-      font-family: Arial, sans-serif;
       background: #f0f2f5;
+      font-family: Arial, sans-serif;
     }
 
     .etichetta {
       background: #fff;
       padding: 30px;
-      margin-top: 40px;
-      max-width: 420px;
-      width: 100%;
+      margin: 40px auto;
+      max-width: 360px;      /* 🔽 più stretto */
+      width: 95%;            /* ↔ margini laterali flessibili */
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.15);
       font-size: 20px;
@@ -37,7 +37,7 @@
 
     .qr img, .barcode img {
       width: 100%;
-      max-width: 160px;
+      max-width: 160px;       /* 🧾 immagini più piccole */
       height: auto;
       touch-action: manipulation;
     }
