--- a/commessa.html
+++ b/commessa.html
@@ -7,44 +7,44 @@
   <style>
     body {
       margin: 0;
-      padding: 50px 20px 60px;
+      padding: 40px 15px;
       background: #f0f2f5;
       font-family: Arial, sans-serif;
     }
 
     .etichetta {
       background: #fff;
-      padding: 30px;
-      margin: 40px auto;
-      max-width: 360px;      /* 🔽 più stretto */
-      width: 95%;            /* ↔ margini laterali flessibili */
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.15);
-      font-size: 20px;
+      padding: 20px;
+      margin: 30px auto;
+      max-width: 300px;          /* 🔽 ridotta per telefoni */
+      width: 95%;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.12);
+      font-size: 16px;           /* 🔠 più contenuto */
     }
 
     h2 {
       text-align: center;
       color: #1e3a5f;
-      font-size: 24px;
-      margin-bottom: 20px;
+      font-size: 20px;
+      margin-bottom: 15px;
     }
 
     .campo {
-      margin-bottom: 16px;
-      line-height: 1.5em;
+      margin-bottom: 12px;
+      line-height: 1.4em;
     }
 
     .qr img, .barcode img {
       width: 100%;
-      max-width: 160px;       /* 🧾 immagini più piccole */
+      max-width: 130px;          /* 🧾 immagini più piccole */
       height: auto;
       touch-action: manipulation;
     }
 
     .qr, .barcode {
       text-align: center;
-      margin-top: 25px;
+      margin-top: 20px;
     }
   </style>
 </head>
