--- a/archivio.html
+++ b/archivio.html
@@ -30,6 +30,18 @@
       color: #888;
       margin-top: 40px;
     }
+    button {
+      padding: 6px 12px;
+      font-size: 14px;
+      cursor: pointer;
+      background-color: #e74c3c;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    button:hover {
+      background-color: #c0392b;
+    }
   </style>
 </head>
 <body>
@@ -55,9 +67,17 @@
           <div class="campo"><strong>Inizio:</strong> ${c.dataInizio}</div>
           <div class="campo"><strong>Termine:</strong> ${c.dataTermine}</div>
           <div class="campo"><strong>Salvata il:</strong> ${c.timestamp}</div>
+          <button onclick="eliminaCommessa(${i})">🗑️ Elimina</button>
         `;
         contenitore.appendChild(blocco);
       });
+    }
+
+    function eliminaCommessa(indice) {
+      const archivio = JSON.parse(localStorage.getItem("storicoCommessa") || "[]");
+      archivio.splice(indice, 1);
+      localStorage.setItem("storicoCommessa", JSON.stringify(archivio));
+      location.reload();
     }
   </script>
 </body>
