--- a/archivio.html
+++ b/archivio.html
@@ -2,12 +2,12 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Archivio Commessa Globale</title>
+  <title>Archivio Locale CAMOGA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f8f9fa;
+      background: #f0f2f5;
       padding: 20px;
     }
     h2 {
@@ -30,44 +30,87 @@
       color: #888;
       margin-top: 40px;
     }
+    .bottoni {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .bottoni button {
+      margin: 5px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .elimina {
+      background-color: #e74c3c;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    .elimina:hover {
+      background-color: #c0392b;
+    }
+    .pulisci {
+      background-color: #888;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+    .pulisci:hover {
+      background-color: #666;
+    }
   </style>
 </head>
 <body>
-  <h2>📜 Archivio Commesse Globali</h2>
+  <h2>📁 Archivio Locale delle Commesse</h2>
   <div id="contenitore"></div>
+  <div class="bottoni">
+    <button class="pulisci" onclick="cancellaTutto()">🧹 Svuota Archivio</button>
+  </div>
 
   <script>
-    fetch('https://raw.githubusercontent.com/GLKliff/camogaQR/main/storico.json')
-      .then(response => {
-        if (!response.ok) throw new Error("Errore nel caricamento del file JSON");
-        return response.json();
-      })
-      .then(archivio => {
-        const contenitore = document.getElementById("contenitore");
+    const archivio = JSON.parse(localStorage.getItem("storicoCommessa") || "[]");
+    const contenitore = document.getElementById("contenitore");
 
-        if (archivio.length === 0) {
-          contenitore.innerHTML = "<div class='vuoto'>Nessuna commessa salvata.</div>";
-        } else {
-          archivio.forEach((c, i) => {
-            const blocco = document.createElement("div");
-            blocco.className = "commessa";
-            blocco.innerHTML = `
-              <div class="campo"><strong>#${i + 1}</strong></div>
-              <div class="campo"><strong>Ordine:</strong> ${c.ordine}</div>
-              <div class="campo"><strong>Materiale:</strong> ${c.materiale}</div>
-              <div class="campo"><strong>Pezzi:</strong> ${c.pezzi}</div>
-              <div class="campo"><strong>Utente:</strong> ${c.utente}</div>
-              <div class="campo"><strong>Inizio:</strong> ${c.dataInizio}</div>
-              <div class="campo"><strong>Termine:</strong> ${c.dataTermine}</div>
-              <div class="campo"><strong>Salvata il:</strong> ${c.timestamp}</div>
-            `;
-            contenitore.appendChild(blocco);
-          });
-        }
-      })
-      .catch(error => {
-        document.getElementById("contenitore").innerHTML = `<div class='vuoto'>Errore: ${error.message}</div>`;
+    function mostraArchivio() {
+      contenitore.innerHTML = "";
+
+      if (archivio.length === 0) {
+        contenitore.innerHTML = "<div class='vuoto'>Nessuna commessa salvata.</div>";
+        return;
+      }
+
+      archivio.forEach((c, i) => {
+        const blocco = document.createElement("div");
+        blocco.className = "commessa";
+        blocco.innerHTML = `
+          <div class="campo"><strong>#${i + 1}</strong></div>
+          <div class="campo"><strong>Ordine:</strong> ${c.ordine}</div>
+          <div class="campo"><strong>Materiale:</strong> ${c.materiale}</div>
+          <div class="campo"><strong>Pezzi:</strong> ${c.pezzi}</div>
+          <div class="campo"><strong>Utente:</strong> ${c.utente}</div>
+          <div class="campo"><strong>Inizio:</strong> ${c.dataInizio}</div>
+          <div class="campo"><strong>Termine:</strong> ${c.dataTermine}</div>
+          <div class="campo"><strong>Salvata il:</strong> ${c.timestamp}</div>
+          <button class="elimina" onclick="eliminaCommessa(${i})">🗑️ Elimina</button>
+        `;
+        contenitore.appendChild(blocco);
       });
+    }
+
+    function eliminaCommessa(indice) {
+      archivio.splice(indice, 1);
+      localStorage.setItem("storicoCommessa", JSON.stringify(archivio));
+      mostraArchivio();
+    }
+
+    function cancellaTutto() {
+      if (confirm("Vuoi davvero cancellare tutto l'archivio?")) {
+        localStorage.removeItem("storicoCommessa");
+        mostraArchivio();
+      }
+    }
+
+    mostraArchivio();
   </script>
 </body>
 </html>
